adding connection lost warning for closed or erroneous ros connection

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -210,6 +210,7 @@
  </div>
  <div id='video-main'>
      <img id="mjpeg-image"></img>
+     <div id="image-cover"></div>
      <div id="smach-container"></div>
      <!-- Divs for selecting eyeballs for looking task -->
      <div class="map-look top left cursor-eyes-up-left"></div>
