--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/sunny/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="js/numeric-1.2.6.js"></script>
+  <script type="text/javascript" src="js/numeric/numeric-1.2.6.js"></script>
   <script type="text/javascript" src="js/snap/snap.svg.js"></script>
   <link type="text/css" href="js/circular-slider-master/circular-slider.min.css" rel="stylesheet" />
   <script type="text/javascript" src="js/circular-slider-master/circular-slider.js"></script>
