removing content from focus-point orientation control

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -48,7 +48,6 @@
   <script type="text/javascript" src="js/tasks/ee_cart.js"></script>
   <script type="text/javascript" src="js/tasks/ee_rotation.js"></script>
   <script type="text/javascript" src="js/tasks/ee_display.js"></script>
-  <script type="text/javascript" src="js/tasks/ee_focus.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick.js"></script>
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
@@ -78,7 +77,6 @@
   <link type="text/css" href="css/battery.css" rel="stylesheet" />
   <link type="text/css" href="css/ee-cart.css" rel="stylesheet" />
   <link type="text/css" href="css/gripper.css" rel="stylesheet" />
-  <link type="text/css" href="css/focus.css" rel="stylesheet" />
   <link type="text/css" href="css/undo.css" rel="stylesheet" />
   <link type="text/css" href="css/smach.css" rel="stylesheet" />
   <link type="text/css" href="css/task-menu.css" rel="stylesheet" />
@@ -135,10 +133,8 @@
         </div>-->
 <!--        <input type="checkbox" id="touchspot-toggle" class="arm-ctrl"/>
         <label id="touchspot-toggle-label" for="touchspot-toggle" class="arm-ctrl">Touch Spot</label>-->
-<!--        <input type="checkbox" id="select-focus-toggle"/>
-        <label id="select-focus-toggle-label" for="select-focus-toggle">Use Target Spot</label>
-        <button id="wristCW" >CW</button>
-        <button id="wristCCW">CCW</button>-->
+<!--        <button id="wristCW" >CW</button>-->
+<!--        <button id="wristCCW">CCW</button>-->
 
         <!-- Step size controls -->
         <div id="speedOptions" class="arm-ctrl">
