cleanup and moves toward module pattern

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -12,8 +12,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <script type="text/javascript" src="js/numeric/numeric-1.2.6.js"></script>
   <script type="text/javascript" src="js/snap/snap.svg.js"></script>
-  <link type="text/css" href="js/circular-slider-master/circular-slider.min.css" rel="stylesheet" />
-  <script type="text/javascript" src="js/circular-slider-master/circular-slider.js"></script>
 
   <!-- THREE.js and related -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.js"></script>
@@ -29,17 +27,19 @@
   <script src="http://cdn.robotwebtools.org/roslibjs/current/roslib.js"></script>
   <script type="text/javascript" src="js/ros/ros3d.js"></script>
   <script type="text/javascript" src="js/ros/extend_ros.js"></script>
-  <script type="text/javascript" src="js/ros/actionclient.js"></script>
-  <script type="text/javascript" src="js/video/viewer.js"></script>
-
-
+  <!--<script type="text/javascript" src="js/ros/actionclient.js"></script>-->
   <script type="text/javascript" src="js/init.js"></script>
-  <script type="text/javascript" src="js/log.js"></script>
-  <script type="text/javascript" src="js/undo.js"></script>
-  <script type="text/javascript" src="js/runstop.js"></script>
-  <script type="text/javascript" src="js/connection_monitor.js"></script>
-  <script type="text/javascript" src="js/battery_monitor.js"></script>
-  <script type="text/javascript" src="js/teleop/pr2.js"></script>
+  <script type="text/javascript" src="js/video/mjpeg_client.js"></script>
+  <script type="text/javascript" src="js/video/viewer.js"></script>
+  <script type="text/javascript" src="js/video/pixel23D.js"></script>
+
+
+  <script type="text/javascript" src="js/utils/log.js"></script>
+  <script type="text/javascript" src="js/utils/undo.js"></script>
+  <script type="text/javascript" src="js/utils/runstop.js"></script>
+  <script type="text/javascript" src="js/utils/connection_monitor.js"></script>
+  <script type="text/javascript" src="js/utils/battery_monitor.js"></script>
+  <script type="text/javascript" src="js/utils/pr2.js"></script>
   <script type="text/javascript" src="js/tasks/look.js"></script>
   <script type="text/javascript" src="js/tasks/drive.js"></script>
   <script type="text/javascript" src="js/tasks/drive-goal-display.js"></script>
@@ -55,8 +55,6 @@
   <script type="text/javascript" src="js/tasks/domains/scratching-knee-adl.js"></script>
   <script type="text/javascript" src="js/tasks/domains/wiping-mouth-wheelchair-adl.js"></script>
   <script type="text/javascript" src="js/tasks/domains/scratching-knee-wheelchair-adl.js"></script>
-  <script type="text/javascript" src="js/tasks/publish-location.js"></script>
-  <script type="text/javascript" src="js/tasks/param-location.js"></script>
   <script type="text/javascript" src="js/tasks/domains/realtime-base-selection.js"></script>
   <script type="text/javascript" src="js/tasks/get-clicked-pose.js"></script>
 <!--  <script type="text/javascript" src="js/tasks/publish-location.js"></script>
@@ -67,8 +65,6 @@
   <script type="text/javascript" src="js/tasks/pointCloudView.js"></script>
   <script type="text/javascript" src="js/tasks/regionView.js"></script>
 
-  <script type="text/javascript" src="js/video/mjpeg_client.js"></script>
-  <script type="text/javascript" src="js/video/pixel23D.js"></script>
   <link type="text/css" href="css/notifications.css" rel="stylesheet" />
   <link type="text/css" href="css/page-wide.css" rel="stylesheet" />
   <link type="text/css" href="css/look.css" rel="stylesheet" />
