removing unused downloaded ros components

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -15,11 +15,7 @@
 
   <!-- THREE.js and related -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.js"></script>
-  <!--<script type="text/javascript" src="js/ros/threejs/three.js"></script>-->
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/threejs/r69/three.min.js"></script>-->
-  <!--<script src="http://cdn.robotwebtools.org/threejs/current/ColladaLoader.js"></script>-->
   <script type="text/javascript" src="js/ros/threejs/ColladaLoader.js"></script>
-<!--  <script src="http://cdn.robotwebtools.org/threejs/current/three.js"></script>-->
 
   <!-- ROSLIB.js and immediate dependecies -->
   <script src="http://cdn.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
@@ -27,13 +23,14 @@
   <script src="http://cdn.robotwebtools.org/roslibjs/current/roslib.js"></script>
   <script type="text/javascript" src="js/ros/ros3d.js"></script>
   <script type="text/javascript" src="js/ros/extend_ros.js"></script>
-  <!--<script type="text/javascript" src="js/ros/actionclient.js"></script>-->
-  <script type="text/javascript" src="js/init.js"></script>
+
+  <!-- Init video content -->
   <script type="text/javascript" src="js/video/mjpeg_client.js"></script>
   <script type="text/javascript" src="js/video/viewer.js"></script>
   <script type="text/javascript" src="js/video/pixel23D.js"></script>
 
-
+  <!-- Interface components -->
+  <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/utils/log.js"></script>
   <script type="text/javascript" src="js/utils/undo.js"></script>
   <script type="text/javascript" src="js/utils/runstop.js"></script>
