place extendROSJS under RFH module, rename files for consistency

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -22,10 +22,10 @@
   <script src="http://cdn.robotwebtools.org/js-bson/current/bson.min.js"></script>
   <script src="http://cdn.robotwebtools.org/roslibjs/current/roslib.js"></script>
   <script type="text/javascript" src="js/ros/ros3d.js"></script>
-  <script type="text/javascript" src="js/ros/extend_ros.js"></script>
+  <script type="text/javascript" src="js/ros/extend-ros.js"></script>
 
   <!-- Init video content -->
-  <script type="text/javascript" src="js/video/mjpeg_client.js"></script>
+  <script type="text/javascript" src="js/video/mjpeg-client.js"></script>
   <script type="text/javascript" src="js/video/viewer.js"></script>
   <script type="text/javascript" src="js/video/pixel23D.js"></script>
 
@@ -34,17 +34,17 @@
   <script type="text/javascript" src="js/utils/log.js"></script>
   <script type="text/javascript" src="js/utils/undo.js"></script>
   <script type="text/javascript" src="js/utils/runstop.js"></script>
-  <script type="text/javascript" src="js/utils/connection_monitor.js"></script>
-  <script type="text/javascript" src="js/utils/battery_monitor.js"></script>
+  <script type="text/javascript" src="js/utils/connection-monitor.js"></script>
+  <script type="text/javascript" src="js/utils/battery-monitor.js"></script>
   <script type="text/javascript" src="js/utils/pr2.js"></script>
   <script type="text/javascript" src="js/tasks/look.js"></script>
   <script type="text/javascript" src="js/tasks/drive.js"></script>
   <script type="text/javascript" src="js/tasks/drive-goal-display.js"></script>
   <script type="text/javascript" src="js/tasks/torso.js"></script>
   <script type="text/javascript" src="js/tasks/gripper.js"></script>
-  <script type="text/javascript" src="js/tasks/ee_cart.js"></script>
-  <script type="text/javascript" src="js/tasks/ee_rotation.js"></script>
-  <script type="text/javascript" src="js/tasks/ee_display.js"></script>
+  <script type="text/javascript" src="js/tasks/ee-cart.js"></script>
+  <script type="text/javascript" src="js/tasks/ee-rotation.js"></script>
+  <script type="text/javascript" src="js/tasks/ee-display.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick.js"></script>
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
@@ -54,13 +54,11 @@
   <script type="text/javascript" src="js/tasks/domains/scratching-knee-wheelchair-adl.js"></script>
   <script type="text/javascript" src="js/tasks/domains/realtime-base-selection.js"></script>
   <script type="text/javascript" src="js/tasks/get-clicked-pose.js"></script>
-<!--  <script type="text/javascript" src="js/tasks/publish-location.js"></script>
-  <script type="text/javascript" src="js/tasks/param-location.js"></script>-->
   <script type="text/javascript" src="js/tasks/smach-display.js"></script>
   <script type="text/javascript" src="js/tasks/menu.js"></script>
   <script type="text/javascript" src="js/tasks/task-menu.js"></script>
-  <script type="text/javascript" src="js/tasks/pointCloudView.js"></script>
-  <script type="text/javascript" src="js/tasks/regionView.js"></script>
+  <script type="text/javascript" src="js/tasks/point-cloud-view.js"></script>
+  <script type="text/javascript" src="js/tasks/region-view.js"></script>
 
   <link type="text/css" href="css/notifications.css" rel="stylesheet" />
   <link type="text/css" href="css/page-wide.css" rel="stylesheet" />
