add selectbox for arm control

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -93,6 +93,11 @@
                     <option value="scratching_left_knee">Scratch Left Knee</option>
                     <option value="scratching_right_knee">Scratch Right Knee</option>
                 </select>
+                <label for="arm-select">Select arm</label>
+                <select id="arm-select" name="arm-select">
+                    <option value="left_arm">Left Arm</option>
+                    <option value="right_arm">Right Arm</option>
+                </select>
                 <label for="model-select">Select a Location</label>
                 <select id="model-select" name="model-select">
                     <option value="autobed">Autobed</div>
