fix text size of move object button, hide task menu for demos

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -162,7 +162,7 @@
             <div class="pick-and-place r-arm-ctrl"></div>
             <div class="rtbs r-arm-ctrl">Approach</div>
             <div class="camera-swing r-arm-ctrl">3D Peek</div>
-            <div class="arm-cam r-arm-ctrl" >Forearm Camera</div>
+<!--            <div class="arm-cam r-arm-ctrl" >Forearm Camera</div>-->
         </div>
 
         <!-- Left Arm Controls -->
@@ -181,7 +181,7 @@
             <div class="pick-and-place l-arm-ctrl"></div>
             <div class="rtbs l-arm-ctrl">Approach</div>
             <div class="camera-swing l-arm-ctrl">3D Peek</div>
-            <div class="arm-cam l-arm-ctrl">Forearm Camera</div>
+<!--            <div class="arm-cam l-arm-ctrl">Forearm Camera</div>-->
         </div>
         </div>
      <div id="util-bar">
