style updates and adding slide-out menu to maximize useful video space

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -198,6 +198,8 @@
         <div id="runstop-button" >RUN-STOP</div>
      </div>
  </div>
+ <div id="left-col-small"></div>
+
  <div id='video-main'>
      <img id="mjpeg-image"></img>
      <div id="image-cover"></div>
