adding arm-postures file, with small util for sending fixed trajectory goals to mpc

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -48,6 +48,7 @@
   <script type="text/javascript" src="js/action-modes/ee-control/ee-cart.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/ee-rotation.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/ee-display.js"></script>
+  <script type="text/javascript" src="js/action-modes/ee-control/arm-postures.js"></script>
   <!-- Plannable tasks -->
   <script type="text/javascript" src="js/task-planning/display-smach-plan.js"></script>
   <script type="text/javascript" src="js/task-planning/task-menu.js"></script>
@@ -158,7 +159,8 @@
         <div class="r-arm-ctrl">
             <!-- Assorted Actions -->
             <h4>Actions</h4>
-            <div class="tuck-side r-arm-ctrl">Tuck Aside</div>
+            <div class="posture aside r-arm-ctrl">Move Aside</div>
+            <div class="posture manip r-arm-ctrl">Move to Setup</div>
             <div class="pick-and-place r-arm-ctrl"></div>
             <div class="rtbs r-arm-ctrl">Approach</div>
             <div class="camera-swing r-arm-ctrl">3D Peek</div>
@@ -177,7 +179,8 @@
         <div class="l-arm-ctrl">
             <!-- Assorted Actions -->
             <h4>Actions</h4>
-            <div class="tuck-side l-arm-ctrl">Tuck Aside</div>
+            <div class="posture aside l-arm-ctrl">Move Aside</div>
+            <div class="posture manip l-arm-ctrl">Move to Setup</div>
             <div class="pick-and-place l-arm-ctrl"></div>
             <div class="rtbs l-arm-ctrl">Approach</div>
             <div class="camera-swing l-arm-ctrl">3D Peek</div>
