adding more pieces to accordian style menu

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -79,10 +79,11 @@
 <!--     <div id="network-status"></div>-->
  </div>
  <div id="left-col">
-    <div id="left-col-accordion">
+    <div class="left-col-accordion">
         <h3>Main Menu</h3>
         <div id="main-menu"></div>
-
+    </div>
+    <div class="left-col-accordion">
         <h3>Task Menu</h3>
         <div id="task-menu">
             <form>
@@ -114,7 +115,9 @@
             </form>
           <div id="start-task-button" class="task-button">Start Task</div>
         </div>
+    </div>
 
+    <div class="left-col-accordion">
         <h3>Controls</h3>
         <div id="controls">
            <!-- Looking Controls -->
