--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -79,11 +79,11 @@
 <!--     <div id="network-status"></div>-->
  </div>
  <div id="left-col">
-    <div class="left-col-accordion">
+    <div class="left-col-accordion main-menu-accordion">
         <h3>Main Menu</h3>
         <div id="main-menu"></div>
     </div>
-    <div class="left-col-accordion">
+    <div class="left-col-accordion controls-accordion">
         <h3>Controls</h3>
         <div id="controls">
            <!-- Looking Controls -->
@@ -122,11 +122,11 @@
             <div class="r-arm-ctrl">
                 <!-- Assorted Actions -->
                 <h4>Actions</h4>
-                <div class="posture aside r-arm-ctrl">Move Aside</div>
-                <div class="posture manip r-arm-ctrl">Move to Setup</div>
-                <div class="pick-and-place r-arm-ctrl"></div>
-                <div class="rtbs r-arm-ctrl">Approach</div>
-                <div class="camera-swing r-arm-ctrl">3D Peek</div>
+                <div class="camera-swing r-arm-ctrl controls-button">3D Peek</div>
+                <div class="posture aside r-arm-ctrl controls-button">Move Aside</div>
+                <div class="posture manip r-arm-ctrl controls-button">Move to Setup</div>
+                <div class="pick-and-place r-arm-ctrl controls-button"></div>
+                <div class="rtbs r-arm-ctrl controls-button">Approach</div>
     <!--            <div class="arm-cam r-arm-ctrl" >Forearm Camera</div>-->
             </div>
 
@@ -142,16 +142,16 @@
             <div class="l-arm-ctrl">
                 <!-- Assorted Actions -->
                 <h4>Actions</h4>
-                <div class="posture aside l-arm-ctrl">Move Aside</div>
-                <div class="posture manip l-arm-ctrl">Move to Setup</div>
-                <div class="pick-and-place l-arm-ctrl"></div>
-                <div class="rtbs l-arm-ctrl">Approach</div>
-                <div class="camera-swing l-arm-ctrl">3D Peek</div>
+                <div class="camera-swing l-arm-ctrl controls-button">3D Peek</div>
+                <div class="posture aside l-arm-ctrl controls-button ">Move Aside</div>
+                <div class="posture manip l-arm-ctrl controls-button">Move to Setup</div>
+                <div class="pick-and-place l-arm-ctrl controls-button"></div>
+                <div class="rtbs l-arm-ctrl controls-button">Approach</div>
     <!--            <div class="arm-cam l-arm-ctrl">Forearm Camera</div>-->
             </div>
         </div>
     </div>
-    <div class="left-col-accordion">
+    <div class="left-col-accordion task-menu-accordion">
         <h3>Task Menu</h3>
         <div id="task-menu">
             <form>
