working task-menu with new option parsing and api

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -157,15 +157,15 @@
             <form>
                 <label for="domain-select">Select a Planned Task</label>
                 <select id="domain-select" name="domain-select">
-                    <option value="adls">Self-Care Tasks</option>
+                    <option value="adl">Self-Care Tasks</option>
                     <option value="realtime_base_selection">Approach</option>
                     <option value="pick_and_place">Move Object</option>
                 </select>
                 
-                <label for="adl-task-select" class="option-select option-adl">Select a Self-care Task</label>
-                <select id="adl-task-select" name="adl-task-select" class="option-select option-adl">
+                <label for="task-select" class="option-select option-adl">Select a Self-care Task</label>
+                <select id="task-select" name="task-select" class="option-select option-adl">
                     <option value="shaving">Shave Face</option>
-                    <option value="wiping_face">Wipe Face</option>
+                    <option value="wiping_mouth">Wipe Mouth</option>
                     <option value="scratching_forehead">Scratch Forehead</option>
                     <option value="scratching_left_knee">Scratch Left Knee</option>
                     <option value="scratching_right_knee">Scratch Right Knee</option>
