moving base tags for action menu to html

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -81,7 +81,23 @@
  <div id="left-col">
     <div class="left-col-accordion main-menu-accordion">
         <h3>Main Menu</h3>
-        <div id="main-menu"></div>
+        <div id="main-menu">
+            <!-- Looking action mode button -->
+            <label for="lookModeButton" class="menu-item">Look</label>
+            <input id="lookModeButton" type="checkbox" class="log-click">
+            <!-- Spine action mode button -->
+            <label for="torsoModeButton" class="menu-item">Spine</label>
+            <input id="torsoModeButton" type="checkbox" class="log-click">
+            <!-- Left Arm action mode button -->
+            <label for="lEECartModeButton" class="menu-item">Left Hand</label>
+            <input id="lEECartModeButton" type="checkbox" class="log-click">
+            <!-- Right arm action mode button -->
+            <label for="rEECartModeButton" class="menu-item">Right Hand</label>
+            <input id="rEECartModeButton" type="checkbox" class="log-click">
+            <!-- Drive action mode button -->
+            <label for="driveModeButton" class="menu-item">Drive</label>
+            <input id="driveModeButton" type="checkbox" class="log-click">
+        </div>
     </div>
     <div class="left-col-accordion controls-accordion">
         <h3>Controls</h3>
