--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -34,6 +34,7 @@
   <script type="text/javascript" src="js/utils/undo.js"></script>
   <script type="text/javascript" src="js/utils/runstop.js"></script>
   <script type="text/javascript" src="js/utils/connection-monitor.js"></script>
+  <script type="text/javascript" src="js/utils/datalogging.js"></script>
   <script type="text/javascript" src="js/utils/battery-monitor.js"></script>
   <script type="text/javascript" src="js/utils/pr2.js"></script>
   <!-- Interface action modes -->
@@ -103,10 +104,10 @@
         <h3>Controls</h3>
         <div id="controls">
            <!-- Looking Controls -->
-           <div class="look-ctrl zoom in">Zoom In</div>
-           <div class="look-ctrl zoom out">Zoom Out</div>
+           <div id="zoomInButton" class="look-ctrl zoom in log-click">Zoom In</div>
+           <div id="zoomOutButton" class="look-ctrl zoom out log-click">Zoom Out</div>
            <!-- Driving Controls -->
-           <div class="tuck-driving drive-ctrl">Tuck Arms</div>
+           <div id="driveTuckButton" class="tuck-driving drive-ctrl log-click">Tuck Arms</div>
            <svg id="drive-dir-icon" class="drive-ctrl" viewBox="-2 0 36 36" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
            <h4 class="drive-ctrl">Click on video to drive.</h4>
 
@@ -115,13 +116,13 @@
                 <h4>Step Size</h4>
                 <div id="speedOptions-buttons">
                   <form id="speedOptions-form">
-                    <input type="radio" id="tiny" class="speed-option" name="speedOption"/>
-                    <label for="tiny">XS</label>
-                    <input type="radio" id="small" class="speed-option" name="speedOption"/>
+                    <input type="radio" id="xsmall" class="speed-option log-click" name="speedOption"/>
+                    <label for="xsmall">XS</label>
+                    <input type="radio" id="small" class="speed-option log-click" name="speedOption"/>
                     <label for="small">S</label>
-                    <input type="radio" id="medium" class="speed-option" name="speedOption" checked="checked"/>
+                    <input type="radio" id="medium" class="speed-option log-click" name="speedOption" checked="checked"/>
                     <label for="medium">M</label>
-                    <input type="radio" id="large" class="speed-option" name="speedOption"/>
+                    <input type="radio" id="large" class="speed-option log-click" name="speedOption"/>
                     <label for="large">L</label>
                   </form>
                 </div>
@@ -130,40 +131,34 @@
             <!-- Right Arm Controls -->
             <div id="r-posrot-set" class="r-arm-ctrl posrot-set">
                 <h4>Position/Rotation</h4>
-                <input class="menu-item" id="r-posrot-pos" type="radio" name="posrot-radio" checked="checked">
+                <input class="menu-item log-click" id="r-posrot-pos" type="radio" name="posrot-radio" checked="checked">
                 <label for="r-posrot-pos">Hand Position</label>
-                <input class="menu-item" id="r-posrot-rot" type="radio" name="posrot-radio">
+                <input class="menu-item log-click" id="r-posrot-rot" type="radio" name="posrot-radio">
                 <label for="r-posrot-rot">Wrist Rotation</label>
             </div>
             <div class="r-arm-ctrl">
                 <!-- Assorted Actions -->
                 <h4>Actions</h4>
-                <div class="camera-swing r-arm-ctrl controls-button">3D Peek</div>
-                <div class="posture aside r-arm-ctrl controls-button">Move Aside</div>
-                <div class="posture manip r-arm-ctrl controls-button">Move to Setup</div>
-                <div class="pick-and-place r-arm-ctrl controls-button"></div>
-                <div class="rtbs r-arm-ctrl controls-button">Approach</div>
-    <!--            <div class="arm-cam r-arm-ctrl" >Forearm Camera</div>-->
+                <div id="r3dPeekButton" class="camera-swing r-arm-ctrl controls-button log-click">3D Peek</div>
+                <div id="rTuckAsideButton" class="posture aside r-arm-ctrl controls-button log-click">Move Aside</div>
+                <div id="rTuckSetupButton" class="posture manip r-arm-ctrl controls-button log-click">Move to Setup</div>
             </div>
 
             <!-- Left Arm Controls -->
             <div id="l-posrot-set" class="l-arm-ctrl posrot-set">
                 <h4>Position/Rotation</h4>
-                <input class="menu-item" id="l-posrot-pos" type="radio" name="posrot-radio" checked="checked">
+                <input class="menu-item log-click" id="l-posrot-pos" type="radio" name="posrot-radio" checked="checked">
                 <label for="l-posrot-pos">Hand Position</label>
-                <input class="menu-item" id="l-posrot-rot" type="radio" name="posrot-radio">
+                <input class="menu-item log-click" id="l-posrot-rot" type="radio" name="posrot-radio">
                 <label for="l-posrot-rot">Wrist Rotation</label>
             </div>
 
             <div class="l-arm-ctrl">
                 <!-- Assorted Actions -->
                 <h4>Actions</h4>
-                <div class="camera-swing l-arm-ctrl controls-button">3D Peek</div>
-                <div class="posture aside l-arm-ctrl controls-button ">Move Aside</div>
-                <div class="posture manip l-arm-ctrl controls-button">Move to Setup</div>
-                <div class="pick-and-place l-arm-ctrl controls-button"></div>
-                <div class="rtbs l-arm-ctrl controls-button">Approach</div>
-    <!--            <div class="arm-cam l-arm-ctrl">Forearm Camera</div>-->
+                <div id="r3dPeekButton" class="camera-swing l-arm-ctrl controls-button log-click">3D Peek</div>
+                <div id="lTuckAside" class="posture aside l-arm-ctrl controls-button  log-click">Move Aside</div>
+                <div id="lTuckSetup" class="posture manip l-arm-ctrl controls-button log-click">Move to Setup</div>
             </div>
         </div>
     </div>
@@ -197,11 +192,11 @@
                     <option value="wheelchair">Wheelchair</option>
                 </select>
             </form>
-          <div id="start-task-button" class="task-button">Start Task</div>
+          <div id="start-task-button" class="task-button log-click">Start Task</div>
         </div>
     </div>
 
-    <div id="undo"><p>Undo</p></div>
+    <div id="undo" class="log-click"><p>Undo</p></div>
      <div id="util-bar">
         <div id='battery-status'>
             <div class='battery-contact'></div>
@@ -213,33 +208,33 @@
                 </div>
             </div>
         </div>
-        <div id="runstop-button" >RUN-STOP</div>
+        <div id="runstop-button" class="log-click">RUN-STOP</div>
      </div>
  </div>
  <div id="left-col-small"></div>
 
  <div id='video-main'>
-     <img id="mjpeg-image"></img>
+     <img id="mjpeg-image" class="log-click"></img>
      <div id="image-cover"></div>
-     <div id="smach-container"></div>
+     <div id="smach-container" class="log-click"></div>
      <!-- Divs for selecting eyeballs for looking task -->
-     <div class="map-look top left cursor-eyes-up-left"></div>
-     <div class="map-look top center cursor-eyes-up"></div>
-     <div class="map-look top right cursor-eyes-up-right"></div>
-     <div class="map-look middle left cursor-eyes-left"></div>
-     <div class="map-look middle right cursor-eyes-right"></div>
-     <div class="map-look bottom left cursor-eyes-down-left"></div>
-     <div class="map-look bottom center cursor-eyes-down"></div>
-     <div class="map-look bottom right cursor-eyes-down-right"></div>
+     <div class="map-look top left cursor-eyes-up-left log-click"></div>
+     <div class="map-look top center cursor-eyes-up log-click"></div>
+     <div class="map-look top right cursor-eyes-up-right log-click"></div>
+     <div class="map-look middle left cursor-eyes-left log-click"></div>
+     <div class="map-look middle right cursor-eyes-right log-click"></div>
+     <div class="map-look bottom left cursor-eyes-down-left log-click"></div>
+     <div class="map-look bottom center cursor-eyes-down log-click"></div>
+     <div class="map-look bottom right cursor-eyes-down-right log-click"></div>
      <!-- divs for driving controls -->
-     <svg id="drive-lines" class="drive-ctrl" version="1.1" xmlns="http://www.w3.org/2000/svg">
+     <svg id="drive-lines" class="drive-ctrl log-click" version="1.1" xmlns="http://www.w3.org/2000/svg">
      </svg>
      <!--<svg id="arm-svg" class="arm-ctrl" version="1.1" xmlns="http://www.w3.org/2000/svg">
      </svg>-->
 <!--     <div class="drive-ctrl drive-look left"></div>
      <div class="drive-ctrl drive-look right"></div>-->
-     <div class="drive-ctrl turn-signal left"><span class="label">Turn Left</span></div>
-     <div class="drive-ctrl turn-signal right"><span class="label">Turn Right</span></div>
+     <div id="leftTurnButton" class="drive-ctrl turn-signal left log-click"><span class="label">Turn Left</span></div>
+     <div id="rightTurnButton" class="drive-ctrl turn-signal right log-click"><span class="label">Turn Right</span></div>
      <!-- divs for torso controls -->
      <img id="tallIcon" src="./css/icons/tall.png"></img>
      <img id="shortIcon" src="./css/icons/short.png"></img>
@@ -247,7 +242,7 @@
      <!-- divs for arm controls -->
      <div id='armCtrlContainer' class="ctrlContainer arm-ctrl">
          <!--<div class="slider"></div>-->
-         <div id="ctrl-ring" class="default">
+         <div id="ctrl-ring" class="default log-click">
              <div class="arrow n big"></div>
              <div class="arrow ne small"></div>
              <div class="arrow e"></div>
@@ -258,19 +253,19 @@
              <div class="arrow nw small"></div>
          </div>
          <div class="center"></div>
-         <div id="away-button"></div>
-         <div id="toward-button"></div>
+         <div id="away-button" class="arm-ctrl log-click"></div>
+         <div id="toward-button" class="arm-ctrl log-click"></div>
      </div>
      <!-- divs for gripper controls -->
      <div id='rGripperCtrlContainer' class='gripper-ctrl-cont r-arm-ctrl'>
         <div class="gripper-slider"></div>
 <!--        <div class="grab">Grab</div>-->
-        <input type="checkbox" class="release" id="release-right"/>
+        <input type="checkbox" class="release log-click" id="release-right"/>
         <label for="release-right">Release on contact</label>
      </div>
      <div id='lGripperCtrlContainer' class='gripper-ctrl-cont l-arm-ctrl'>
         <div class="gripper-slider"></div>
-        <input type="checkbox" class="release" id="release-left"/>
+        <input type="checkbox" class="release log-click" id="release-left"/>
         <label for="release-left">Release on contact</label>
      </div>
  </div>
