adding more datalogging, with some cleanup, and slider logs

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -238,7 +238,7 @@
      <!-- divs for torso controls -->
      <img id="tallIcon" src="./css/icons/tall.png"></img>
      <img id="shortIcon" src="./css/icons/short.png"></img>
-     <div id="torsoSlider"></div>
+     <div id="torsoSlider" class="log-slide"></div>
      <!-- divs for arm controls -->
      <div id='armCtrlContainer' class="ctrlContainer arm-ctrl">
          <!--<div class="slider"></div>-->
@@ -258,13 +258,13 @@
      </div>
      <!-- divs for gripper controls -->
      <div id='rGripperCtrlContainer' class='gripper-ctrl-cont r-arm-ctrl'>
-        <div class="gripper-slider"></div>
+        <div class="gripper-slider log-slide"></div>
 <!--        <div class="grab">Grab</div>-->
         <input type="checkbox" class="release log-click" id="release-right"/>
         <label for="release-right">Release on contact</label>
      </div>
      <div id='lGripperCtrlContainer' class='gripper-ctrl-cont l-arm-ctrl'>
-        <div class="gripper-slider"></div>
+        <div class="gripper-slider log-slide"></div>
         <input type="checkbox" class="release log-click" id="release-left"/>
         <label for="release-left">Release on contact</label>
      </div>
