adding prototype for logging mousehold

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -227,7 +227,7 @@
      <div class="map-look bottom center cursor-eyes-down log-click"></div>
      <div class="map-look bottom right cursor-eyes-down-right log-click"></div>
      <!-- divs for driving controls -->
-     <svg id="drive-lines" class="drive-ctrl log-click" version="1.1" xmlns="http://www.w3.org/2000/svg">
+     <svg id="drive-lines" class="drive-ctrl log-mousehold" version="1.1" xmlns="http://www.w3.org/2000/svg">
      </svg>
      <!--<svg id="arm-svg" class="arm-ctrl" version="1.1" xmlns="http://www.w3.org/2000/svg">
      </svg>-->
