final first pass of data logging for all interface elements, ready for more extensive testing

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -229,8 +229,8 @@
      <!-- divs for driving controls -->
      <svg id="drive-lines" class="drive-ctrl log-mousehold" version="1.1" xmlns="http://www.w3.org/2000/svg">
      </svg>
-     <div id="left-turn-button" class="drive-ctrl turn-signal left log-click"><span class="label">Turn Left</span></div>
-     <div id="right-turn-button" class="drive-ctrl turn-signal right log-click"><span class="label">Turn Right</span></div>
+     <div id="left-turn-button" class="drive-ctrl turn-signal left log-mousehold"><span class="label">Turn Left</span></div>
+     <div id="right-turn-button" class="drive-ctrl turn-signal right log-mousehold"><span class="label">Turn Right</span></div>
      <!-- divs for torso controls -->
      <img id="torso-tall-icon" src="./css/icons/tall.png"></img>
      <img id="torso-short-icon" src="./css/icons/short.png"></img>
