First commit of green zone to move back to. testing not done

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -43,6 +43,7 @@
   <script type="text/javascript" src="js/action-modes/look/get-clicked-pose.js"></script>
   <script type="text/javascript" src="js/action-modes/drive/drive.js"></script>
   <script type="text/javascript" src="js/action-modes/drive/drive-goal-display.js"></script>
+  <script type="text/javascript" src="js/action-modes/drive/drive-zone-display.js"></script>
   <script type="text/javascript" src="js/action-modes/torso/torso.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/gripper.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/ee-cart.js"></script>
