--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="js/utils/runstop.js"></script>
   <script type="text/javascript" src="js/utils/connection-monitor.js"></script>
   <script type="text/javascript" src="js/utils/datalogging.js"></script>
+  <script type="text/javascript" src="js/utils/fabric-skin.js"></script>
   <script type="text/javascript" src="js/utils/battery-monitor.js"></script>
   <script type="text/javascript" src="js/utils/pr2.js"></script>
   <!-- Interface action modes -->
@@ -50,7 +51,7 @@
   <script type="text/javascript" src="js/action-modes/ee-control/ee-rotation.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/ee-display.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/arm-postures.js"></script>
-  <script type="text/javascript" src="js/action-modes/ee-control/fabric-skin.js"></script>
+  <script type="text/javascript" src="js/action-modes/ee-control/skin-display.js"></script>
   <!-- Plannable tasks -->
   <script type="text/javascript" src="js/task-planning/display-smach-plan.js"></script>
   <script type="text/javascript" src="js/task-planning/task-menu.js"></script>
