--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -68,6 +68,7 @@
   <link type="text/css" href="css/drive.css" rel="stylesheet" />
   <link type="text/css" href="css/battery.css" rel="stylesheet" />
   <link type="text/css" href="css/ee-cart.css" rel="stylesheet" />
+  <link type="text/css" href="css/skin.css" rel="stylesheet" />
   <link type="text/css" href="css/gripper.css" rel="stylesheet" />
   <link type="text/css" href="css/undo.css" rel="stylesheet" />
   <link type="text/css" href="css/smach.css" rel="stylesheet" />
@@ -237,6 +238,21 @@
      <img id="torso-tall-icon" src="./css/icons/tall.png"></img>
      <img id="torso-short-icon" src="./css/icons/short.png"></img>
      <div id="torso-slider" class="log-slide"></div>
+     <!-- Skin contact display layer -->
+     <div id="skin-contact-display">
+        <div id="edge-contact-n" class="edge-contact n"></div>
+        <div id="edge-contact-ne" class="edge-contact ne"></div>
+        <div id="edge-contact-e" class="edge-contact e"></div>
+        <div id="edge-contact-se" class="edge-contact se"></div>
+        <div id="edge-contact-s" class="edge-contact s"></div>
+        <div id="edge-contact-sw" class="edge-contact sw"></div>
+        <div id="edge-contact-w" class="edge-contact w"></div>
+        <div id="edge-contact-nw" class="edge-contact nw"></div>
+        <div id="contact-marker-1" class="contact-marker"></div>
+        <div id="contact-marker-2" class="contact-marker"></div>
+        <div id="contact-marker-3" class="contact-marker"></div>
+        <div id="contact-marker-4" class="contact-marker"></div>
+     </div>
      <!-- divs for arm controls -->
      <div id='armCtrlContainer' class="ctrlContainer arm-ctrl">
          <!--<div class="slider"></div>-->
