moving torso controls to right side

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -252,6 +252,10 @@
         <div id="contact-marker-2" class="contact-marker"></div>
         <div id="contact-marker-3" class="contact-marker"></div>
         <div id="contact-marker-4" class="contact-marker"></div>
+        <div id="contact-marker-5" class="contact-marker"></div>
+        <div id="contact-marker-6" class="contact-marker"></div>
+        <div id="contact-marker-7" class="contact-marker"></div>
+        <div id="contact-marker-8" class="contact-marker"></div>
      </div>
      <!-- divs for arm controls -->
      <div id='armCtrlContainer' class="ctrlContainer arm-ctrl">
