debugging of tool picking

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -196,6 +196,14 @@
                     <option value="autobed">Autobed</option>
                     <option value="wheelchair">Wheelchair</option>
                 </select>
+                <label for="tool-select" class="option-select option-tool_pick">Select a Tool</label>
+                <select id="tool-select" name="tool-select" class='option-select option-tool_pick'>
+                    <option value="scratcher">Scratcher</option>
+                    <option value="towel">Towel</option>
+                    <option value="toothbrush">Toothbrush</option>
+                    <option value="shaver">Shaver</option>
+                    <option value="lotion_applicator">Lotion Applicator</option>
+                </select>
             </form>
           <div id="start-task-button" class="task-button log-click">Start Task</div>
         </div>
