debugging of tool picking, now planning in basic cases

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -59,6 +59,7 @@
   <script type="text/javascript" src="js/task-planning/domains/place.js"></script>
   <script type="text/javascript" src="js/task-planning/domains/pick-and-place.js"></script>
   <script type="text/javascript" src="js/task-planning/domains/adl.js"></script>
+  <script type="text/javascript" src="js/task-planning/domains/tool-pick.js"></script>
   <script type="text/javascript" src="js/task-planning/domains/realtime-base-selection.js"></script>
   <!-- CSS -->
   <link type="text/css" href="css/notifications.css" rel="stylesheet" />
