--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -33,7 +33,7 @@
   <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/utils/undo.js"></script>
   <script type="text/javascript" src="js/utils/runstop.js"></script>
-  <script type="text/javascript" src="js/utils/connection-monitor.js"></script>
+  <script type="text/javascript" src="js/utils/heartbeat.js"></script>
   <script type="text/javascript" src="js/utils/datalogging.js"></script>
   <script type="text/javascript" src="js/utils/fabric-skin.js"></script>
   <script type="text/javascript" src="js/utils/battery-monitor.js"></script>
