prototyping skin for base

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -245,6 +245,20 @@
      </svg>
      <div id="left-turn-button" class="drive-ctrl turn-signal left log-mousehold"><span class="label">Turn Left</span></div>
      <div id="right-turn-button" class="drive-ctrl turn-signal right log-mousehold"><span class="label">Turn Right</span></div>
+     <div id="bumper-contact-display">
+        <div id="bumper-1" class="bumper corner corner-fr"></div>
+        <div id="bumper-2" class="bumper corner corner-br"></div>
+        <div id="bumper-3" class="bumper corner corner-bl"></div>
+        <div id="bumper-4" class="bumper corner corner-fl"></div>
+        <div id="bumper-5" class="bumper edge edge-fl"></div>
+        <div id="bumper-6" class="bumper edge edge-fr"></div>
+        <div id="bumper-7" class="bumper edge edge-bl"></div>
+        <div id="bumper-8" class="bumper edge edge-br"></div>
+        <div id="bumper-9" class="bumper edge edge-rf"></div>
+        <div id="bumper-10" class="bumper edge edge-rb"></div>
+        <div id="bumper-11" class="bumper edge edge-lf"></div>
+        <div id="bumper-12" class="bumper edge edge-lb"></div>
+     </div>
      <!-- divs for torso controls -->
      <img id="torso-tall-icon" src="./css/icons/tall.png"></img>
      <img id="torso-short-icon" src="./css/icons/short.png"></img>
